--- a/css/style.css
+++ b/css/style.css
@@ -60,3 +60,103 @@ body {
     gap:10px;
     align-items: center;
 }
+
+.hero__bg__image__container {
+    width:100%;
+    height:80vh;
+}
+
+.hero__bg__image {
+    width:100%;
+    height:100%;
+    object-fit: cover;
+}
+
+.hero__bg__overlay {
+    position:absolute;
+    inset: 0;
+    width:100%;
+    height:80vh;
+    background: rgba(0, 0, 0, 0.4);
+    background-image: linear-gradient( to top, rgba(0, 0, 0, 0.8) 0,rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.8) 100%);
+}
+
+.hero__card {
+    position: absolute;
+    top: 20%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap:10px;
+}
+
+.hero__title {
+    font-weight:600;
+    font-size: 2rem;
+}
+
+.hero__subtitle, .hero__description {
+    font-weight: 400;
+    font-size: 1rem;
+}
+
+.hero__description {
+    margin: 0 50px;
+}
+
+.email__input {
+    border: none;
+    background:transparent;
+    width:100%;
+    height:100%;
+    padding-left:7px;
+}
+
+.email__label {
+    color:black;
+    position:absolute;
+    top:28%;
+    left:2%;
+    color: rgb(153, 149, 149);
+    transition: 0.5s;
+}
+
+.email__form__container {
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+
+.form__container {
+    background-color: white;
+    width:90%;
+    height:50px;
+    position:relative;
+}
+
+.email__input:focus + .email__label {
+    top: 0.2rem;
+    font-size: 10px;
+}
+
+.email__input:not(:placeholder-shown).email__input:not(:focus) + .email__label {
+    top:0.2rem;
+    font-size: 10px;
+}
+
+.email__input:focus-visible{
+    outline:none;
+}
+
+.primary__button {
+    background-color: #dc030f;
+    border: 1px solid #dc030f;
+    color:white;
+    padding : 0.8rem 1.2rem;
+    border-radius: 2px;
+    font-size:15px;
+    letter-spacing: 1px;
+}
+
